tests/kiama/positive/L1/type.ob
MODULE type;

CONST
    aconst1 = 10;
    aconst2 = 20;

TYPE
    atype1 = INTEGER;
    atype3 = BOOLEAN;
    atype2 = atype1;
    
VAR    
    avar1 : atype1;
    avar3 : INTEGER;
    avar4 : BOOLEAN;

END type.
