tests/kiama/negative/name_errors/L1/7_type4.ob
MODULE type;

CONST
    aconst1 = 10;

VAR    
    avar1 : aconst1;

END type.
